<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/AdvancedSettingsLabel"
        style="@style/Text"
        android:text="@string/advanced_settings_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="@dimen/title_vertical_bias" />

    <Button
        android:id="@+id/AboutButton"
        style="@style/ActionButton.Large"
        android:contentDescription="@string/about_button_content_description"
        android:text="@string/about_button_label"
        app:layout_constraintBottom_toTopOf="@+id/BackupButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AdvancedSettingsLabel" />

    <Button
        android:id="@+id/BackupButton"
        style="@style/ActionButton.Large"
        android:contentDescription="@string/backup_button_content_description"
        android:text="@string/backup_button_label"
        android:tooltipText="@string/backup_button_tooltip"
        app:layout_constraintBottom_toTopOf="@+id/RestoreDataButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AboutButton" />

    <Button
        android:id="@+id/RestoreDataButton"
        style="@style/ActionButton.Large"
        android:contentDescription="@string/restore_data_button_content_description"
        android:text="@string/restore_data_button_label"
        android:tooltipText="@string/restore_data_button_tooltip"
        app:layout_constraintBottom_toTopOf="@+id/RestoreDefaultsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BackupButton" />

    <Button
        android:id="@+id/RestoreDefaultsButton"
        style="@style/ActionButton.Large"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/restore_defaults_button_content_description"
        android:text="@string/restore_defaults_button_label"
        android:tooltipText="@string/restore_defaults_tooltip"
        app:layout_constraintBottom_toTopOf="@+id/AdvancedSettingsBackButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RestoreDataButton" />

    <Button
        android:id="@+id/AdvancedSettingsBackButton"
        style="@style/ActionButton.Large"
        android:contentDescription="@string/advanced_settings_back_button_content_description"
        app:icon="@drawable/arrow_down_icon_large"
        app:iconSize="@dimen/button_icon_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="@dimen/action_button_vertical_bias" />

</androidx.constraintlayout.widget.ConstraintLayout>