<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/IconSelect"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/IconSelectLabel"
        style="@style/Text"
        android:text="@string/icon_select_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="@dimen/title_vertical_bias" />

    <Button
        android:id="@+id/EditButton"
        style="@style/ActionButton.Small"
        android:contentDescription="@string/edit_icons_button_content_description"
        android:tooltipText="@string/edit_icons_button_tooltip"
        app:icon="@drawable/pencil_icon_large"
        app:iconTint="@color/icon_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/AddNewIconButton"
        app:layout_constraintStart_toEndOf="@+id/BackButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="@dimen/action_button_vertical_bias" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/BackButton"
        style="@style/NavButton"
        android:contentDescription="@string/shop_button_description"
        android:tooltipText="@string/back_button_tooltip"
        app:icon="@drawable/arrow_left_icon_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="@dimen/left_nav_button_horizontal_bias_portrait"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="@dimen/bottom_nav_button_vertical_bias_portrait" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/AddNewIconButton"
        style="@style/NavButton"
        android:contentDescription="@string/new_quest_button_description"
        android:tooltipText="@string/add_icon_button_tooltip"
        app:icon="@drawable/plus_icon_large"
        app:layout_constraintBottom_toBottomOf="@+id/BackButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/BackButton" />

    <ImageButton
        android:id="@+id/SpadesGroupButton"
        style="@style/IconGroupSelector"
        android:contentDescription="@string/spades_icon_group_content_description"
        android:translationZ="1dp"
        app:layout_constraintEnd_toStartOf="@+id/DiamondsGroupButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/IconSelectLabel"
        app:layout_constraintTop_toBottomOf="@+id/IconSelectLabel"
        app:srcCompat="@drawable/spades_icon"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/HeartsGroupButton"
        style="@style/IconGroupSelector"
        android:contentDescription="@string/hearts_icon_group_content_description"
        android:translationZ="1dp"
        app:layout_constraintEnd_toStartOf="@+id/ClubsGroupButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/DiamondsGroupButton"
        app:layout_constraintTop_toTopOf="@+id/DiamondsGroupButton"
        app:srcCompat="@drawable/heart_icon"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/ClubsGroupButton"
        style="@style/IconGroupSelector"
        android:contentDescription="@string/clubs_icon_group_content_description"
        android:translationZ="1dp"
        app:layout_constraintEnd_toEndOf="@+id/IconSelectLabel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/HeartsGroupButton"
        app:layout_constraintTop_toTopOf="@+id/HeartsGroupButton"
        app:srcCompat="@drawable/clubs_icon"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/DiamondsGroupButton"
        style="@style/IconGroupSelector"
        android:contentDescription="@string/diamonds_icon_group_content_description"
        android:translationZ="1dp"
        app:layout_constraintEnd_toStartOf="@+id/HeartsGroupButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/SpadesGroupButton"
        app:layout_constraintTop_toTopOf="@+id/SpadesGroupButton"
        app:srcCompat="@drawable/diamond_icon"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/IconSelectComposeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/NoIconsMessage"
        style="@style/Message"
        android:text="@string/no_icons_found_message"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>